--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port=4300",
     "start:jit": "ng serve --aot=false",
     "start:prod": "ng serve --configuration production",
     "start:scenes": "ng serve scenes",
@@ -25,11 +25,11 @@
     "scenes:generate": "ng e2e --port 4201 scenes && yarn scenes:optimize",
     "scenes:optimize": "node tools/optimize-scene-screenshots",
     "test:audit:a11y": "node tools/audit-docs-a11y",
-    "test:audit:a11y:localhost": "run-p --race \"~~light-server -s dist/material-angular-io -p 4200 --quiet\" \"test:audit:a11y http://localhost:4200\" --",
-    "test:audit:a11y:ci": "run-p --race \"~~light-server -s ../dist/material-angular-io -p 4200 --quiet\" \"test:audit:a11y http://localhost:4200\" --",
+    "test:audit:a11y:localhost": "run-p --race \"~~light-server -s dist/material-angular-io -p 4300 --quiet\" \"test:audit:a11y http://localhost:4300\" --",
+    "test:audit:a11y:ci": "run-p --race \"~~light-server -s ../dist/material-angular-io -p 4300 --quiet\" \"test:audit:a11y http://localhost:4300\" --",
     "test:audit": "node tools/audit-docs",
-    "test:audit:localhost": "run-p --race \"start:static\" \"test:audit http://localhost:4200 2000\" --",
-    "test:audit:ci": "run-p --race \"~~light-server -s ../dist/material-angular-io -p 4200 --quiet\" \"test:audit http://localhost:4200\" --",
+    "test:audit:localhost": "run-p --race \"start:static\" \"test:audit http://localhost:4300 2000\" --",
+    "test:audit:ci": "run-p --race \"~~light-server -s ../dist/material-angular-io -p 4300 --quiet\" \"test:audit http://localhost:4300\" --",
     "~~light-server": "light-server --bind=localhost --historyindex=/index.html --no-reload"
   },
   "private": true,
@@ -51,6 +51,8 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@angular/youtube-player": "^15.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@stackblitz/sdk": "^1.5.2",
     "moment": "^2.29.1",
     "path-normalize": "^6.0.7",
